ghc-4335c07/testsuite/tests/typecheck/should_fail/CustomTypeErrors05.stderr

CustomTypeErrors05.hs:14:14: error:
    • ERROR
    • In the expression: 1
      In an equation for ‘testNOTOK2’: testNOTOK2 = 1
